tests/snapshots/invalid-signature.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::invalid_signature

  × Invalid signature 'Invalid': invalid numerator 'Invalid'
