tests/snapshots/invalid-swing.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::validation

  × Validation error: Invalid swing.grid: 6 (expected power of two like 8 or 16)
   ╭─[input:1:1]
 1 │ ---
   · ─┬─
   ·  ╰── Invalid value
 2 │ swing:
   ╰────
  help: Examples: swing: 8, swing: 16, swing: { grid: 8, amount: 66 }
