tests/snapshots/invalid-template-arg-zero.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::base

  × Parse error: Verify
   ╭─[input:2:1]
 1 │ # Track: 1
 2 │ [@A x0]
   · ───┬───
   ·    ╰── Here
 3 │ 
   ╰────
