tests/snapshots/invalid-template-cycle.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::circular_template_reference

  × Circular template reference detected: A -> B -> C -> A
