tests/snapshots/invalid-unit.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::validation

  × Validation error: Invalid unit 'step': expected 'bar' or 'beat'
   ╭─[input:1:1]
 1 │ ---
   · ─┬─
   ·  ╰── Invalid value
 2 │ unit: "step"
   ╰────
  help: Example: unit: bar
