tests/snapshots/loop.md.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.0,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 5.0,
        duration: 1.0,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 6.0,
        duration: 1.0,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 7.0,
        duration: 1.0,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
]
