tests/snapshots/missing-template-nested.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::context

  × while compiling track 'Track'
  ├─▶ while compiling template call 'A'
  ├─▶ while compiling nested template call 'B'
  ├─▶ while compiling nested template call 'Missing'
  ╰─▶ Template not found: 'Missing' while compiling track 'Track', stack [@A -> @B -> @Missing]
