tests/snapshots/missing-template.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::context

  × while compiling track 'Track'
  ├─▶ while compiling template call 'NonExistent'
  ╰─▶ Template not found: 'NonExistent' while compiling track 'Track', stack [@NonExistent]
