tests/snapshots/note-out-of-range-high.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::compiler::context

  × while compiling track 'Track'
  ├─▶ while compiling pattern line in track sequence
  ├─▶ while compiling pattern block emission
  ╰─▶ Invalid note 'B8' at track 'Track', track sequence, block 0, leaf 0: MIDI note out of range: 131 (expected 0..127) (B8)
